[CHANGE] Template filenames
They should always have `-` as separator instead of `_`.

--- a/afat/templates/afat/base.html
+++ b/afat/templates/afat/base.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block header_nav_collapse_left %}
-    {% include "afat/partials/menu.html" %}
+    {% include "afat/partials/common/navigation/top-menu.html" %}
 {% endblock %}
 
 {% block content %}
