--- a/afat/templates/afat/view/statistics/statistics-character.html
+++ b/afat/templates/afat/view/statistics/statistics-character.html
@@ -4,37 +4,37 @@
 
 {% block page_title %}
     {% translate "Fleet activity tracking statistics" as page_title %}
-    {{ corporation }} {{ page_title|title }}
+    {{ character.character_name }} {{ page_title|title }}
 {% endblock %}
 
 {% block afat_header %}
     {% translate "Statistics" as site_title %}
-    {% include "framework/header/page-header.html" with title=site_title sub_title=corporation %}
+    {% include "framework/header/page-header.html" with title=site_title sub_title=character.name %}
 {% endblock %}
 
 {% block afat_body %}
     {% include "afat/bundles/chartjs-js.html" %}
 
     {% if month == "1" %}
-        {% url "afat:statistics_corporation" corp.corporation_id year_prev 12 as url_previous_month %}
+        {% url "afat:statistics_character" character.character_id year_prev 12 as url_previous_month %}
     {% else %}
-        {% url "afat:statistics_corporation" corp.corporation_id year month_prev as url_previous_month %}
+        {% url "afat:statistics_character" character.character_id year month_prev as url_previous_month %}
     {% endif %}
 
     {% if month == "12" %}
-        {% url "afat:statistics_corporation" corp.corporation_id year_next 1 as url_next_month %}
-        {% url "afat:statistics_corporation" corp.corporation_id year_current month_current as url_current_month %}
+        {% url "afat:statistics_character" character.character_id year_next 1 as url_next_month %}
+        {% url "afat:statistics_character" character.character_id year_current month_current as url_current_month %}
     {% else %}
-        {% url "afat:statistics_corporation" corp.corporation_id year month_next as url_next_month %}
-        {% url "afat:statistics_corporation" corp.corporation_id year_current month_current as url_current_month %}
+        {% url "afat:statistics_character" character.character_id year month_next as url_next_month %}
+        {% url "afat:statistics_character" character.character_id year_current month_current as url_current_month %}
     {% endif %}
-    {% include "afat/partials/month_navigation.html" with url_previous_month=url_previous_month url_next_month=url_next_month url_current_month=url_current_month %}
 
-    {% include "afat/partials/statistics/corporation/tabs_navigation.html" %}
+    {% include "afat/partials/common/navigation/month-navigation.html" with url_previous_month=url_previous_month url_next_month=url_next_month url_current_month=url_current_month %}
+    {% include "afat/partials/statistics/character/tabs-navigation.html" %}
 
     <div class="tab-content">
-        {% include "afat/partials/statistics/corporation/tabs/graphs.html" %}
-        {% include "afat/partials/statistics/corporation/tabs/member.html" %}
+        {% include "afat/partials/statistics/character/tabs/graphs.html" %}
+        {% include "afat/partials/statistics/character/tabs/raw_data.html" %}
     </div>
 {% endblock %}
 
@@ -71,11 +71,10 @@
         $(document).ready(function() {
             $.fn.dataTable.moment('YYYY-MMM-DD, HH:mm');
 
-            $('#corp-members').DataTable({
-                order: [
-                    [1, 'desc'],
-                    [0, 'asc']
-                ],
+            $('#raw-data').DataTable({
+                "order": [
+                    [4, "desc"]
+                ]
             });
         });
     </script>
