--- a/afat/templates/afat/partials/statistics/corporation/tabs-navigation.html
+++ b/afat/templates/afat/partials/statistics/corporation/tabs-navigation.html
@@ -1,6 +1,9 @@
 {% load i18n %}
 
 <ul class="nav nav-tabs">
-    <li class="active"><a data-toggle="tab" href="#graphs">{% translate "Graphs" %}</a></li>
-    <li><a data-toggle="tab" href="#members">{% translate "Members" %}</a></li>
+    {% translate "Graphs" as tab_title %}
+    {% include "afat/partials/common/navigation/tab.html" with is_active_tab=True tab_id="graphs" tab_title=tab_title %}
+
+    {% translate "Members" as tab_title %}
+    {% include "afat/partials/common/navigation/tab.html" with is_active_tab=False tab_id="members" tab_title=tab_title %}
 </ul>
