[CHANGE] Update character statistics charts

--- a/afat/templates/afat/partials/statistics/character/tabs/raw_data.html
+++ b/afat/templates/afat/partials/statistics/character/tabs/raw_data.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<div id="rawdata" class="tab-pane fade card card-default">
+<div id="tab-rawdata" class="tab-pane fade card card-default border-0" role="tabpanel" aria-labelledby="tab-rawdata">
     <div class="card-body">
         <h4>{% translate "FATs for" %} {{ character.character_name }}</h4>
 
