--- a/afat/templates/afat/view/statistics/statistics-character.html
+++ b/afat/templates/afat/view/statistics/statistics-character.html
@@ -13,8 +13,6 @@
 {% endblock %}
 
 {% block afat_body %}
-    {% include "afat/bundles/chartjs-js.html" %}
-
     {% if month == "1" %}
         {% url "afat:statistics_character" character.character_id year_prev 12 as url_previous_month %}
     {% else %}
@@ -44,38 +42,25 @@
 {% endblock %}
 
 {% block extra_javascript %}
+    {% include "afat/bundles/chartjs-js.html" %}
+    {% include "afat/bundles/afat-statistics-js.html" %}
     {% include "bundles/datatables-js-bs5.html" %}
     {% include "bundles/moment-js.html" %}
 
     <script>
-        /**
-         * datetime formatting
-         *
-         * @param format
-         * @param locale
-         */
-        $.fn.dataTable.moment = function(format, locale) {
-            let types = $.fn.dataTable.ext.type;
-
-            // Add type detection
-            types.detect.unshift(function(d) {
-                return moment(d, format, locale, true).isValid() ? 'moment-' + format : null;
-            });
-
-            // Add sorting method - use an integer for the sorting
-            types.order['moment-' + format + '-pre'] = function(d) {
-                return moment(d, format, locale, true).unix();
-            };
-        };
-
-        $(document).ready(function() {
-            $.fn.dataTable.moment('YYYY-MMM-DD, HH:mm');
-
+        $(document).ready(() => {
             $('#raw-data').DataTable({
                 "order": [
                     [4, "desc"]
                 ]
             });
+
+            // Chart rendering
+            if (chartInfo.length > 0) {
+                chartInfo.forEach((chart) => {
+                    drawChart(chart.element, chart.type, chart.data, chart.options);
+                });
+            }
         });
     </script>
 {% endblock %}
