--- a/afat/templates/afat/partials/statistics/character/tabs/graphs.html
+++ b/afat/templates/afat/partials/statistics/character/tabs/graphs.html
@@ -23,7 +23,7 @@
                             labels: {{ data_ship_type.0|safe }}
                         },
                         options: { // Chart options
-                            responsive: false
+                            responsive: true
                         }
                     });
                 </script>
@@ -48,7 +48,7 @@
                             labels: {{ data_time.0|safe }}
                         },
                         options: { // Chart options
-                            responsive: false
+                            responsive: true
                         }
                     });
                 </script>
