--- a/afat/templates/afat/partials/statistics/corporation/tabs/graphs.html
+++ b/afat/templates/afat/partials/statistics/corporation/tabs/graphs.html
@@ -18,7 +18,7 @@
                 <div class="card-body">
                     <h4>{% translate "FATs by ship type" %}</h4>
 
-                    <canvas id="ship-bar-stacked" width="800" height="500"></canvas>
+                    <canvas id="ship-bar-stacked" width="800" height="250vh"></canvas>
 
                     <script>
                         const chartInfo = [];
@@ -38,7 +38,7 @@
                                 labels: {{ data_stacked.0|safe }}
                             },
                             options: { // Chart options
-                                responsive: false,
+                                responsive: true,
                                 indexAxis: 'x',
                                 scales: {
                                     x: {
@@ -57,11 +57,11 @@
                 </div>
             </div>
 
-            <div id="fatsbytime" class="tab-pane fade in card-default">
+            <div id="tab-fatsbytime" class="tab-pane fade card card-default border-0" role="tabpanel" aria-labelledby="tab-fatsbytime">
                 <div class="card-body">
                     <h4>{% translate "FATs by time" %}</h4>
 
-                    <canvas id="time-line" width="800" height="500"></canvas>
+                    <canvas id="time-line" width="800" height="250vh"></canvas>
 
                     <script>
                         chartInfo.push({
@@ -77,18 +77,18 @@
                                 labels: {{ data_time.0|safe }}
                             },
                             options: { // Chart options
-                                responsive: false
+                                responsive: true
                             }
                         });
                     </script>
                 </div>
             </div>
 
-            <div class="tab-pane fade in card-default" id="fatsbyweek">
+            <div id="tab-fatsbyweek" class="tab-pane fade card card-default border-0" role="tabpanel" aria-labelledby="tab-fatsbyweek">
                 <div class="card-body">
                     <h4>{% translate "FATs by weekday" %}</h4>
 
-                    <canvas id="weekday-line" width="800" height="500"></canvas>
+                    <canvas id="weekday-line" width="800" height="250vh"></canvas>
 
                     <script>
                         chartInfo.push({
@@ -104,7 +104,7 @@
                                 labels: {{ data_weekday.0|safe }}
                             },
                             options: { // Chart options
-                                responsive: false
+                                responsive: true
                             }
                         });
                     </script>
