--- a/afat/templates/afat/view/statistics/statistics-alliance.html
+++ b/afat/templates/afat/view/statistics/statistics-alliance.html
@@ -15,13 +15,13 @@
 
 {% block afat_body %}
 
-    {% if month == "1" %}
+    {% if month == 1 %}
         {% url "afat:statistics_alliance" ally.alliance_id year_prev 12 as url_previous_month %}
     {% else %}
         {% url "afat:statistics_alliance" ally.alliance_id year month_prev as url_previous_month %}
     {% endif %}
 
-    {% if month == "12" %}
+    {% if month == 12 %}
         {% url "afat:statistics_alliance" ally.alliance_id year_next 1 as url_next_month %}
         {% url "afat:statistics_alliance" ally.alliance_id year_current month_current as url_current_month %}
     {% else %}
