--- a/afat/templates/afat/partials/common/navigation/month-navigation.html
+++ b/afat/templates/afat/partials/common/navigation/month-navigation.html
@@ -6,7 +6,7 @@
 
     <span class="afat-label-statistics mx-3">{{ month|month_name }} {{ year }}</span>
 
-    {% if month_next <= month_current %}
+    {% if month_next_with_year <= month_current_with_year %}
         <a class="btn btn-primary btn-sm" href="{{ url_next_month }}" title='{% translate "Next month" %}'><i class="fa-solid fa-forward"></i></a>
         <a class="btn btn-primary btn-sm" href="{{ url_current_month }}" title='{% translate "Current month" %}'><i class="fa-solid fa-fast-forward"></i></a>
     {% endif %}
